--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
     align-items: center;
     justify-content: center;
     height: calc(100vh - 80px);
-    width: 100%;
+    width: 80%; /* PC 화면에서 크기를 80%로 설정 */
     margin-top: 80px;
     padding: 20px;
     box-sizing: border-box;
@@ -158,6 +158,19 @@ body {
     to {bottom: 0; opacity: 0;}
 }
 
+.result-image {
+    position: fixed;
+    bottom: -100%;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: bottom 0.5s ease;
+    width: 50%; /* PC 화면에서 이미지 크기를 50%로 설정 */
+}
+
+.result-image.show {
+    bottom: 0;
+}
+
 /* 반응형 스타일 */
 @media (max-width: 768px) {
     .hamburger-menu {
@@ -184,8 +197,8 @@ body {
     }
 
     .container {
-        padding: 20px;
-        width: 100%;
+        width: 100%; /* 모바일 화면에서 크기를 100%로 설정 */
+        padding: 20px; /* 좌우 패딩 20px 적용 */
         overflow-x: hidden;
     }
 
@@ -206,5 +219,9 @@ body {
     .button {
         font-size: 18px;
         height: 50px;
+    }
+
+    .result-image {
+        width: 100%; /* 모바일 화면에서 이미지 크기를 100%로 설정 */
     }
 }
